--- a/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Pages/ListPage.xaml
@@ -1,50 +1,96 @@
-﻿<Page x:Class="Notes.APP.Pages.ListPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Notes.APP.Pages"
-      mc:Ignorable="d" 
-      Loaded="Page_Loaded"
-      d:DesignHeight="450" d:DesignWidth="800" Background="White"
-      Title="ListPage">
+﻿<Page
+    x:Class="Notes.APP.Pages.ListPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="ListPage"
+    Background="White"
+    Loaded="Page_Loaded">
+
     <Page.Resources>
+        <!--  ListView 基础样式  -->
         <Style TargetType="ListView">
-            <Style.Setters>
-                <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
-                <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
-            </Style.Setters>
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
         </Style>
+
     </Page.Resources>
+
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition ></RowDefinition>
-        </Grid.RowDefinitions>
+        <ListView
+            x:Name="notesList"
+            Margin="0,10"
+            HorizontalAlignment="Stretch"
+            BorderBrush="Transparent"
+            BorderThickness="0"
+            MouseDoubleClick="NotesList_MouseDoubleClick">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListViewItem">
+                                <Border Padding="5" Background="{TemplateBinding Background}">
+                                    <ContentPresenter />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <!--  绑定的数据项使用的模板  -->
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Border
+                        Height="100"
+                        Padding="5"
+                        Background="#c5ebf7"
+                        BorderBrush="LightGray"
+                        BorderThickness="1"
+                        CornerRadius="10">
+                        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
 
-        <ListView  x:Name="notesList"  BorderBrush="Transparent" BorderThickness="0" Margin="5,10"  MouseDoubleClick="NotesList_MouseDoubleClick">
-                <ListView.Resources>
-                    <!-- 数据绑定项的模板 -->
-                    <DataTemplate x:Key="DynamicItemTemplate">
-                        <StackPanel Orientation="Horizontal" Margin="0,10">
-                            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE8FD;" FontSize="16" Margin="0,0,10,0" />
-                            <TextBlock Text="{Binding NoteName}" FontSize="14" VerticalAlignment="Center" />
-                            <TextBlock Text="{Binding UpdateTimeStr}" FontSize="14" VerticalAlignment="Center" />
-                        <!-- 右键菜单 -->
-                        <StackPanel.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Header="打开" Click="EditMenuItem_Click"/>
-                                <MenuItem Header="删除" Click="DeleteMenuItem_Click"/>
-                            </ContextMenu>
-                        </StackPanel.ContextMenu>
-                    </StackPanel>
-                        
-                    </DataTemplate>
-                </ListView.Resources>
+                            <TextBlock
+                                Grid.Row="0"
+                                Width="50"
+                                HorizontalAlignment="left"
+                                FontFamily="Segoe MDL2 Assets"
+                                FontSize="16"
+                                Text="&#xE8FD;" />
 
-                <!-- 绑定的数据项使用的模板 -->
-                <ListView.ItemTemplate>
-                    <StaticResource ResourceKey="DynamicItemTemplate"/>
-                </ListView.ItemTemplate>
-            </ListView> 
+                            <TextBlock
+                                Grid.Row="0"
+                                Margin="0,0,10,0"
+                                HorizontalAlignment="Right"
+                                FontSize="9"
+                                Text="{Binding UpdateTimeStr}" />
+
+                            <!--  TextBlock 自动换行，确保宽度自适应  -->
+                            <TextBlock
+                                Grid.Row="1"
+                                MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}"
+                                Margin="2"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Text="{Binding ContentShort}"
+                                TextWrapping="Wrap" />
+
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+            <!--  右键菜单  -->
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Click="EditMenuItem_Click" Header="打开" />
+                    <MenuItem Click="DeleteMenuItem_Click" Header="删除" />
+                </ContextMenu>
+            </ListView.ContextMenu>
+        </ListView>
     </Grid>
 </Page>
