--- a/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/MainWindow.xaml
@@ -13,8 +13,6 @@
     AllowsTransparency="True"
     Background="Transparent"
     Loaded="Window_Loaded"
-    MouseLeftButtonDown="OnMouseLeftButtonDown"
-    MouseMove="Window_MouseMove"
     Opacity="{Binding Opacity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
     ShowInTaskbar="False"
     WindowStartupLocation="CenterScreen"
@@ -70,7 +68,9 @@
                     Height="40"
                     VerticalAlignment="Top"
                     Background="{Binding BackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    BorderBrush="#bfc1be">
+                    BorderBrush="#bfc1be"
+                    MouseLeftButtonDown="OnMouseLeftButtonDown"
+                    MouseMove="Window_MouseMove">
                     <Border.CornerRadius>
                         <CornerRadius
                             BottomLeft="0"
@@ -339,7 +339,7 @@
             Margin="0,0,5,5"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
-            Background="Transparent"
+            Background="Gray"
             Cursor="SizeNWSE"
             DragDelta="ResizeHandle_DragDelta">
             <Thumb.Template>
@@ -349,7 +349,7 @@
                         Height="16"
                         Background="{TemplateBinding Background}"
                         CornerRadius="8"
-                        Opacity="1">
+                        Opacity="0.2">
                         <Border.RenderTransform>
                             <TranslateTransform X="0" Y="0" />
                         </Border.RenderTransform>
