--- a/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Pages/ListPage.xaml
@@ -15,10 +15,9 @@
 
     </Page.Resources>
 
-    <Grid>
+    <Grid Margin="10">
         <ListView
             x:Name="notesList"
-            Margin="0,10"
             HorizontalAlignment="Stretch"
             BorderBrush="Transparent"
             BorderThickness="0"
@@ -30,7 +29,7 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="ListViewItem">
-                                <Border Padding="5" Background="{TemplateBinding Background}">
+                                <Border Background="{TemplateBinding Background}">
                                     <ContentPresenter />
                                 </Border>
                             </ControlTemplate>
@@ -43,7 +42,6 @@
                 <DataTemplate>
                     <Border
                         Height="100"
-                        Padding="5"
                         Background="#c5ebf7"
                         BorderBrush="LightGray"
                         BorderThickness="1"
@@ -53,10 +51,14 @@
                                 <RowDefinition Height="30" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
                             <TextBlock
                                 Grid.Row="0"
+                                Grid.Column="0"
                                 Width="50"
+                                Padding="10"
                                 HorizontalAlignment="left"
                                 FontFamily="Segoe MDL2 Assets"
                                 FontSize="16"
@@ -64,26 +66,25 @@
 
                             <TextBlock
                                 Grid.Row="0"
-                                Margin="0,0,10,0"
+                                Grid.Column="1"
+                                Padding="10"
                                 HorizontalAlignment="Right"
                                 FontSize="9"
                                 Text="{Binding UpdateTimeStr}" />
-
                             <!--  TextBlock 自动换行，确保宽度自适应  -->
                             <TextBlock
                                 Grid.Row="1"
-                                MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}"
-                                Margin="2"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=ListView}}"
+                                Padding="10,0"
                                 HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
                                 Text="{Binding ContentShort}"
                                 TextWrapping="Wrap" />
-
                         </Grid>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
-
             <!--  右键菜单  -->
             <ListView.ContextMenu>
                 <ContextMenu>
