--- a/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/MainWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:local="clr-namespace:Notes.APP.CustomCtrls"
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:xc="http://schemas.xceed.com/wpf/xaml/toolkit"
+    Name="NoteDetail"
     Title="便利贴"
     Width="250"
     Height="280"
@@ -14,6 +15,7 @@
     Background="Transparent"
     Loaded="Window_Loaded"
     Opacity="{Binding Opacity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+    PreviewKeyDown="Window_PreviewKeyDown"
     ShowInTaskbar="False"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None">
@@ -143,9 +145,7 @@
                                     Click="MinimizeButton_Click"
                                     Content="&#xE921;"
                                     FontFamily="Segoe MDL2 Assets"
-                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                    <!--<fa:FontAwesome Icon="Minus" Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="15" />-->
-                                </Button>
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  关闭按钮  -->
                                 <Button
                                     Grid.Column="3"
@@ -156,9 +156,7 @@
                                     Click="CloseButton_Click"
                                     Content="&#xE8BB;"
                                     FontFamily="Segoe MDL2 Assets"
-                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                    <!--<fa:FontAwesome Icon="Times" Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="15" />-->
-                                </Button>
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
                             </Grid>
@@ -238,6 +236,7 @@
                             <RowDefinition Height="20" />
                             <RowDefinition Height="30" />
                             <RowDefinition Height="*" />
+                            <RowDefinition Height="1" />
                             <RowDefinition Height="40" />
                             <RowDefinition Height="40" />
                         </Grid.RowDefinitions>
@@ -246,7 +245,8 @@
                             Margin="2"
                             Foreground="#000"
                             Text="颜色" />
-                        <!--<xc:ColorCanvas Grid.Row="1" Margin="0,0,-85,0" Width="250"  SelectedColorChanged="ColorCanvas_SelectedColorChanged"/>-->
+                        <!--  颜色选择  -->
+                        <!--  色彩板  -->
                         <xc:ColorPicker
                             Name="MyColorPicker"
                             Grid.Row="1"
@@ -258,6 +258,7 @@
                             Margin="2"
                             Foreground="#000"
                             Text="透明度" />
+                        <!--  透明度  -->
                         <Slider
                             Grid.Row="3"
                             Width="130"
@@ -290,8 +291,27 @@
                             </Slider.Template>
 
                         </Slider>
+                        <!--  置顶  -->
+                        <!--<StackPanel
+                            Grid.Row="4"
+                            Width="auto"
+                            VerticalAlignment="Center"
+                            Orientation="Horizontal">
+                            <CheckBox
+                                Name="isTopUpBox"
+                                Margin="5,3"
+                                Checked="TopUpBox_Checked"
+                                Unchecked="TopUpBox_Unchecked" />
+                            <TextBlock
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                MouseLeftButtonDown="TopUp_MouseLeftButtonDown"
+                                Text="窗口置顶" />
+                        </StackPanel>-->
+                        <!--  查看列表  -->
                         <StackPanel
-                            Grid.Row="5"
+                            Grid.Row="6"
                             Margin="5,0"
                             VerticalAlignment="Bottom"
                             MouseLeftButtonDown="StackPanel_MouseLeftButtonDown_1"
@@ -307,8 +327,9 @@
                                 FontSize="14"
                                 Text="查看列表" />
                         </StackPanel>
+                        <!--  删除  -->
                         <StackPanel
-                            Grid.Row="6"
+                            Grid.Row="7"
                             Margin="5,0,5,10"
                             VerticalAlignment="Bottom"
                             MouseLeftButtonDown="StackPanel_MouseLeftButtonDown"
