--- a/Notes.APP/Pages/HomePage.xaml
+++ b/Notes.APP/Pages/HomePage.xaml
@@ -1,26 +1,27 @@
-﻿<Page x:Class="Notes.APP.Pages.HomePage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Notes.APP.Pages"
-      mc:Ignorable="d" 
-      d:Height="300"
-      d:Width="300"
-      Loaded="Page_Loaded"
-      Title="HomePage">
+﻿<pg:BasePage
+    x:Class="Notes.APP.Pages.HomePage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Notes.APP.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pg="clr-namespace:Notes.APP.Models"
+    Title="HomePage"
+    d:Height="300"
+    d:Width="300"
+    Loaded="Page_Loaded"
+    mc:Ignorable="d">
 
-    <Grid Name="pageConent" > 
-            <TextBox Text="page"  
-                 Name="txtConent"
-                 TextWrapping="Wrap"   
-                 Background="Transparent"
-                 AcceptsReturn="True"
-                 TextChanged="txtConent_TextChanged"
-                 VerticalScrollBarVisibility="Hidden"
-                 HorizontalScrollBarVisibility="Hidden"  
-                 HorizontalAlignment="Stretch"
-                 VerticalAlignment="Stretch" >
-            </TextBox> 
+    <Grid Name="pageConent">
+        <TextBox
+            Name="txtConent"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            AcceptsReturn="True"
+            Background="Transparent"
+            HorizontalScrollBarVisibility="Hidden"
+            TextChanged="txtConent_TextChanged"
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Hidden" />
     </Grid>
-</Page>
+</pg:BasePage>
