--- a/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Pages/ListPage.xaml
@@ -1,7 +1,8 @@
-﻿<Page
+﻿<pg:BasePage
     x:Class="Notes.APP.Pages.ListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:pg="clr-namespace:Notes.APP.Models"
     Title="ListPage"
     Background="White"
     Loaded="Page_Loaded">
@@ -95,4 +96,4 @@
             </ListView.ContextMenu>
         </ListView>
     </Grid>
-</Page>
+</pg:BasePage>
