--- a/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Pages/ListPage.xaml
@@ -16,13 +16,14 @@
 
     </Page.Resources>
 
-    <Grid Margin="10">
+    <Grid>
         <ListView
             x:Name="notesList"
             HorizontalAlignment="Stretch"
             BorderBrush="Transparent"
             BorderThickness="0"
-            MouseDoubleClick="NotesList_MouseDoubleClick">
+            MouseDoubleClick="NotesList_MouseDoubleClick"
+            VirtualizingStackPanel.IsVirtualizing="False">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Background" Value="Transparent" />
@@ -42,12 +43,21 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Height="100"
-                        Margin="0,0,0,10"
+                        Height="80"
+                        Margin="10"
                         Background="#c5ebf7"
                         BorderBrush="LightGray"
                         BorderThickness="1"
-                        CornerRadius="10">
+                        CornerRadius="15">
+                        <!--  添加阴影效果  -->
+                        <Border.Effect>
+                            <DropShadowEffect
+                                BlurRadius="10"
+                                Direction="0"
+                                Opacity="0.5"
+                                ShadowDepth="0"
+                                Color="Black" />
+                        </Border.Effect>
                         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="30" />
@@ -78,7 +88,8 @@
                                 Grid.Row="1"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
-                                Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=ListView}}"
+                                Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Border}}"
+                                Margin="-20,0"
                                 Padding="10,0"
                                 HorizontalAlignment="Stretch"
                                 Text="{Binding ContentShort}"
@@ -89,9 +100,96 @@
             </ListView.ItemTemplate>
             <!--  右键菜单  -->
             <ListView.ContextMenu>
+                <!--  打开菜单项  -->
                 <ContextMenu>
-                    <MenuItem Click="EditMenuItem_Click" Header="打开" />
-                    <MenuItem Click="DeleteMenuItem_Click" Header="删除" />
+                    <MenuItem Click="EditMenuItem_Click" Header="查看便签">
+                        <MenuItem.Icon>
+                            <TextBlock
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                FontFamily="Segoe MDL2 Assets"
+                                FontSize="16"
+                                Text="&#xE8FD;" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Click="DeleteMenuItem_Click" Header="删除便签">
+                        <MenuItem.Icon>
+                            <TextBlock
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                FontFamily="Segoe MDL2 Assets"
+                                FontSize="16"
+                                Foreground="Red"
+                                Text="&#xE74D;" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <!--  添加样式  -->
+                    <ContextMenu.Style>
+                        <Style TargetType="ContextMenu">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ContextMenu">
+                                        <Border
+                                            Padding="5"
+                                            Background="White"
+                                            BorderBrush="Gray"
+                                            BorderThickness="1"
+                                            CornerRadius="10">
+                                            <StackPanel>
+                                                <ItemsPresenter />
+                                            </StackPanel>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+
+                    </ContextMenu.Style>
+                    <ContextMenu.ItemContainerStyle>
+                        <Style TargetType="MenuItem">
+                            <Setter Property="Padding" Value="10,5,10,5" />
+                            <!--  给内容适当的Padding  -->
+                            <Setter Property="Margin" Value="0" />
+                            <Setter Property="HorizontalContentAlignment" Value="Left" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Cursor" Value="Hand" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="MenuItem">
+                                        <Border
+                                            Height="30"
+                                            Background="Transparent"
+                                            BorderBrush="{TemplateBinding BorderBrush}"
+                                            BorderThickness="1"
+                                            CornerRadius="10">
+                                            <StackPanel Orientation="Horizontal">
+                                                <!--  图标显示  -->
+                                                <ContentPresenter
+                                                    Margin="10,0,5,0"
+                                                    HorizontalAlignment="Left"
+                                                    VerticalAlignment="Center"
+                                                    Content="{TemplateBinding Icon}" />
+                                                <!--  文本显示  -->
+                                                <ContentPresenter
+                                                    Margin="5"
+                                                    HorizontalAlignment="Left"
+                                                    VerticalAlignment="Center"
+                                                    Content="{TemplateBinding Header}" />
+                                            </StackPanel>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <!--  设置悬浮时背景色变化  -->
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="red" />
+                                    <Setter Property="Foreground" Value="Black" />
+                                    <Setter Property="BorderBrush" Value="LightBlue" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ContextMenu.ItemContainerStyle>
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
