--- a/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/MainWindow.xaml
@@ -6,7 +6,7 @@
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:xc="http://schemas.xceed.com/wpf/xaml/toolkit"
     Name="NoteDetail"
-    Title="便利贴"
+    Title="便签"
     Width="250"
     Height="280"
     MinWidth="250"
