字体改变，代码标亮

--- a/Notes.APP/Notes.APP/Pages/HomePage.xaml
+++ b/Notes.APP/Notes.APP/Pages/HomePage.xaml
@@ -2,6 +2,7 @@
     x:Class="Notes.APP.Pages.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:avalon="http://icsharpcode.net/sharpdevelop/avalonedit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Notes.APP.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,8 +15,16 @@
     mc:Ignorable="d">
 
     <Grid Name="pageConent" Margin="0,1">
-
-        <TextBox
+        <avalon:TextEditor
+            Name="txtContent"
+            Background="Transparent"
+            HorizontalScrollBarVisibility="Hidden"
+            ShowLineNumbers="True"
+            SyntaxHighlighting="C#"
+            TextChanged="txtContent_TextChanged_1"
+            VerticalScrollBarVisibility="Hidden"
+            WordWrap="True" />
+        <!--<TextBox
             Name="txtContent"
             Padding="5"
             HorizontalAlignment="Stretch"
@@ -26,6 +35,6 @@
             HorizontalScrollBarVisibility="Hidden"
             TextChanged="txtContent_TextChanged"
             TextWrapping="Wrap"
-            VerticalScrollBarVisibility="Hidden" />
+            VerticalScrollBarVisibility="Hidden" />-->
     </Grid>
 </pg:BasePage>
